changeup gradle stuff
also reformats some code